# INE5425

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
source/: CMakeLists.txt  parser_changes_information.cpp  parser_changes_information.hpp
test/: CMakeLists.txt  unit_test.cpp
